--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <button id="batterySubmitButton">Добавить источник ЭДС</button><br/>
         </div>
 
-        <div id="measurerForm">
+        <div id="measurerForm" style="width: fit-content;">
           <button id="ammeterSubmitButton">Добавить амперметр</button><br/>
 
           <button id="voltmeterSubmitButton">Добавить вольтмтер</button><br/>
