--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id="measurerForm" style="width: fit-content;">
           <button id="ammeterSubmitButton">Добавить амперметр</button><br/>
 
-          <button id="voltmeterSubmitButton">Добавить вольтмтер</button><br/>
+          <button id="voltmeterSubmitButton">Добавить вольтметер</button><br/>
 
           <button id="parallelGroupsSubmitButton">Добавить параллельное соединение</button><br/>
 
